test for ASlider